--- a/assets/css/theme-color/default-theme.css
+++ b/assets/css/theme-color/default-theme.css
@@ -16,15 +16,15 @@ Author URI : http://www.markups.io/
 .mu-simplefilter li.active,
 .mu-copy-right a:hover,
 .mu-copy-right a:focus {
-	color: #339999;
+	color: #14509e;
 }
 
 .mu-send-msg-btn:hover,
 .mu-send-msg-btn:focus,
 .mu-social-media a:hover,
 .mu-social-media a:focus {
-	border: 1px solid #339999;
-	color: #339999;
+	border: 1px solid #14509e;
+	color: #14509e;
 }
 
 .mu-testimonial-slide .slick-dots li button:hover,
@@ -38,20 +38,20 @@ Author URI : http://www.markups.io/
 .mu-skill-progress-bar .mu-pro-bar,
 #mu-featured-slider,
 #mu-header.mu-fixed-nav {
-	background-color: #339999;
+	background-color: #14509e;
 }
 
 .mu-contact-form .form-control:focus {
-	border: 1px solid #339999;    
+	border: 1px solid #14509e;    
 } 
 
 .mu-resume-btn,
 .mu-service-icon-box {
-	border: 2px solid #339999;
-	color: #339999;
+	border: 2px solid #14509e;
+	color: #14509e;
 }
 
 
 .mu-pro-bar .proggress {
-	background-color: #339999 !important;
+	background-color: #14509e !important;
 }
