--- a/style.css
+++ b/style.css
@@ -1,32 +1,3 @@
-
-/*
-Template Name: Kevin	
-Author: MarkUps
-Author URI: http://www.markups.io/
-Version: 1.0
-*/
-
-
-/* Table of Content
-==================================================
-#BASIC TYPOGRAPHY
-#HEADER	
-#MENU 
-#FEATURED SLIDER 
-#ABOUT US
-#SERVICE 
-#PORTFOLIO
-#TESTIMONIAL
-#CONTACT US
-#FOOTER
-#RESPONSIVE STYLE
-*/
-
-
-/*--------------------*/
-/* BASIC TYPOGRAPHY */
-/*--------------------*/
-
 body,
 html {
 	overflow-x:hidden;
@@ -131,7 +102,7 @@ kbd {
 	background-color: #ddd;
 	padding: 4px 6px;
 	border-radius: 2px;
-	color: ;
+	color: #ddd ;
 }
 
 address {
